# ikea-product-names

./: README.md  ikea_furniture.csv  ikea_hierarchical_categories.csv  ikea_live_furniture_data.csv  index.html  index.qmd  index_test.qmd  ingest.py  test.py
ikea-product-names/: Makefile  README.md  pyproject.toml
ikea-product-names/docs/: mkdocs.yml
ikea-product-names/docs/docs/: index.md
ikea-product-names/notebooks/: 01-prediction.ipynb  infographic-klippan.html  infographic-ml-pipeline.html  inforgaphic-umap.html  inforgraphic.html
ikea-product-names/scraper/: __init__.py  dataset.py  features.py  ingest.py  plots.py
ikea-product-names/scraper/modeling/: predict.py  train.py
